# brengin

./: .envrc  .gitignore  Cargo.toml  LICENSE  flake.nix  justfile
.cargo/: config.toml
examples/: boids.rs  buttons.rs  mandelbrot.rs  simple_sprite.rs  sprites.rs  ui-triangle.rs  ui.rs
examples/assets/: triangle-shader.wgsl
src/: assets.rs  audio.rs  camera.rs  color.rs  lib.rs  prelude.rs  quat_ext.rs  renderer.rs  transform.rs  ui.rs
src/assets/: asset_stats.rs
src/color/: tests.rs
src/renderer/: background.wgsl  background_renderer.rs  sprite-shader.wgsl  sprite_renderer.rs  texture.rs
src/renderer/sprite_renderer/: sprite_sheet.rs  tests.rs
src/transform/: tests.rs
src/ui/: builder.rs  color_rect.rs  color_rect_pipeline.rs  core.rs  rect.rs  tests.rs  text.rs  text_rect.rs  text_rect_pipeline.rs  textured-rect-shader.wgsl  textured_rect_pipeline.rs  ui-rect.wgsl  ui-text.wgsl
