[package]
name = "brengin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio", "parallel", "tracing"]
audio = ["dep:kira"]
parallel = ["cecs/parallel"]
tracing = ["dep:tracing", "cecs/tracing"]

[dependencies]
tracing = { version = "0.1.41", optional = true }
cecs = { git = "https://github.com/caolo-game/cecs", default-features = false }
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
fastrand = "2.3.0"
glam = { version = "0.30.3", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
smallvec = "1.15.1"
wgpu = { version = "25.0.2" }
winit = "0.30"
kira = { version = "0.10", optional = true }
instant = { version = "0.1.13", features = [] }
pollster = "0.4.0"
parking_lot = "0.12.4"
rustybuzz = "0.20.1"
tiny-skia = "0.11.4"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[[example]]
name = "boids"
