[package]
name = "brengin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["audio", "parallel", "tracing"]
audio = ["dep:kira"]
parallel = ["cecs/parallel"]
tracing = ["dep:tracing", "cecs/tracing"]

[dependencies]
tracing = { version = "0.1.44", optional = true }
cecs = { git = "https://github.com/snorrwe/cecs", default-features = false }
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
fastrand = "2.3.0"
glam = { version = "0.30.9", features = ["bytemuck"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
smallvec = "1.15.1"
wgpu = "28.0.0"
winit = "0.30"
kira = { version = "0.11", optional = true }
instant = { version = "0.1.13", features = [] }
pollster = "0.4.0"
parking_lot = "0.12.5"
rustybuzz = "0.20.1"
tiny-skia = "0.11.4"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
thiserror = "2.0.17"

[dev-dependencies]
tracing-subscriber = "0.3.22"

[[example]]
name = "boids"
